# Java-Code-Arena

./: .dockerignore  .gitignore  COMPILER_SERVER.md  Dockerfile  codeReview.py  components.json  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.md  requirements.txt  server.py  start.bat  start.sh  tailwind.config.ts  vite.config.ts
backend/: pyproject.toml  serve_sitemap.py  server.py  server_old.py  shares.db
backend/api/: routes.py  sockets.py
backend/core/: config.py  database.py
backend/public/: blog.html  hello-world.md  samsung-galaxy-s26.md  second-post.md
backend/services/: codeReview.py  java_compiler.py  share_service.py  visualizer.py
backend/utils/: helpers.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Console.tsx  Editor.tsx  NavBar.tsx  SEOHead.tsx  ShareDialog.tsx  StatusBadge.tsx  TerminalPanel.tsx  XTermTerminal.tsx
frontend/src/hooks/: use-java-api.ts
frontend/src/lib/: api-client.ts  queryClient.ts
frontend/src/pages/: Playground.tsx  blog.tsx  (+6 more)
public/: sitemap.xml
scripts/: generate-dynamic-sitemap.js  generate-sitemap.js
src/: App.tsx  index.css  main.tsx
src/components/: Console.tsx  Editor.tsx  NavBar.tsx  SEOHead.tsx  ShareDialog.tsx  XTermTerminal.tsx
src/hooks/: use-snippets.ts  useCheerpJ.ts
src/lib/: cheerpj.ts
src/pages/: BlogPost.tsx  Playground.tsx  not-found.tsx
src/types/: cheerpj.d.ts
(+7 files in other folders)
